--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!-- bootstrap css -->
+    <link
+      href="//netdna.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <title>
+      React - Email Sign Up with Verification, Authentication & Forgot Password
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
